--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Harvest | Home</title>
+  <title>Load More</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,22 +14,19 @@
 <body>
   <!--container start-->
   <div class="container">
-    <!--header section start-->
-    <header>
 
-    </header>
-    <!--header section start-->
     <!--main section start-->
     <main>
-
+      <section class="load-more-section">
+        <div class="wrapper">
+          <h1>Load More Function</h1>
+          <ul class="card-container">
+          </ul>
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
-    <!--footer section start-->
-    <footer>
-
-    </footer>
-    <!--footer section end-->
   </div>
   <!--container end-->
 
