Html Structure Update

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <h1>Load More Function</h1>
           <ul class="card-container">
           </ul>
+          <div class="btn">
+            <button class="load-more">Load More</button>
+          </div>
         </div>
       </section>
     </main>
